CSS: Fix index on mobile

--- a/data/indexstyle.css
+++ b/data/indexstyle.css
@@ -40,7 +40,7 @@ h1#title a { visibility: visible }
 
 a { text-decoration:none}
 
-div#header { width:100%; background-color: #f5f5f5; height:5.2em; display:block;}
+div#header { width:100%; background-color: #f5f5f5; min-height:5.2em; display:block;}
 div#header input {-webkit-appearance:searchfield;-moz-appearance:searchfield;appearance:searchfield;}
 
 hr { margin: 0; border-collapse:collapse;background-color: #e5e5e5; height:1px;border:none;  }
